@startuml





/' Objects '/

class Application {
	+Application()
	+~Application()
	-win : MainSDLWindow*
	-pg : Playground*
	-frame_rate_ms : Uint32
}


class MainSDLWindow {
	+MainSDLWindow()
	+~MainSDLWindow()
	+GetRenderer() : SDL_Renderer*
	-renderer : SDL_Renderer*
	-window : SDL_Window*
	+Init(const char* winname, int width, int height) : int
}


class Playground {
	+Playground(int nbrow, int nbcol)
	+~Playground()
	+GetSnake() : Snake*
	-snake : Snake*
	+Collide() : int
	+GetScore() : int
	+MeetFruit() : int
	+Next(int dir) : int
	-nbcol : int
	-nbrow : int
	+GenerateFruit() : void
	+init(int dir) : void
}


class Segment {
<<<<<<< HEAD
<<<<<<< HEAD
=======
=======
>>>>>>> 1971166cf2652b2b41eb78cbd94735704cda2cd1
	+Segment(int pos_x, int pos_y, int dir)
	+~Segment()
	-next : Segment*
	+GetDIR() : int
	+GetPOS_X() : int
	+GetPOS_Y() : int
	-dir : int
	-pos_x : int
	-pos_y : int
<<<<<<< HEAD
>>>>>>> 66cc5f05b61b6de8ff61e57c3643ef3c91e675e4
=======
>>>>>>> 1971166cf2652b2b41eb78cbd94735704cda2cd1
}


class Snake {
	+Snake()
	+~Snake()
	+GetHead() : Segment*
	-head : Segment*
	-tail : Segment*
	+Collide() : int
	-dir_prev : int
}





/' Inheritance relationships '/




/' Aggregation relationships '/

.Application o-- .MainSDLWindow


.Application o-- .Playground


.Playground o-- .Snake


<<<<<<< HEAD
<<<<<<< HEAD
=======
.Segment o-- .Segment


>>>>>>> 66cc5f05b61b6de8ff61e57c3643ef3c91e675e4
=======
.Segment o-- .Segment


>>>>>>> 1971166cf2652b2b41eb78cbd94735704cda2cd1
.Snake "2" o-- .Segment






/' Nested objects '/



@enduml

